Move ZipFileInstaller from chrome/ to extensions/

Moving ZipFileInstaller from chrome/ to extensions/ and changing it to
take a callback instead of directly installing the unpacked
extension/theme.

Providing a method in chrome/ to create a callback that does the
installation (previous behavior).

This CL is in preparation for using the Unzipper service to install
extensions, as some of the logic performed by the utility handler code
will be moved to this class and we'll be shared with the CrxInstaller
class.

Note that the zipfile_installer_unittest could not yet be moved to
extensions/, it will be done later (see crbug.com/817131).

Bug: 799220
Change-Id: I9ae6f13e5e9a0af4c111119952fd8915ff3dcfd3
Reviewed-on: https://chromium-review.googlesource.com/939842
Commit-Queue: Jay Civelli <jcivelli@chromium.org>
Reviewed-by: Finnur Thorarinsson <finnur@chromium.org>
Reviewed-by: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540204}
Former-commit-id: a0fb48fd35f23d38db5c8e5d666c269e8add2aca