chrome/browser/ui/webui/extensions/install_extension_handler.cc
@@ -9,11 +9,11 @@
 #include "base/bind.h"
 #include "base/strings/string_util.h"
 #include "base/strings/utf_string_conversions.h"
+#include "chrome/browser/extensions/chrome_zipfile_installer.h"
 #include "chrome/browser/extensions/crx_installer.h"
 #include "chrome/browser/extensions/extension_install_prompt.h"
 #include "chrome/browser/extensions/extension_service.h"
 #include "chrome/browser/extensions/unpacked_installer.h"
-#include "chrome/browser/extensions/zipfile_installer.h"
 #include "chrome/browser/profiles/profile.h"
 #include "chrome/grit/generated_resources.h"
 #include "content/public/browser/web_contents.h"
@@ -99,7 +99,9 @@ void InstallExtensionHandler::HandleInstallMessage(
       web_ui()->GetWebContents()->GetBrowserContext());
 
   if (file_display_name_.MatchesExtension(FILE_PATH_LITERAL(".zip"))) {
-    ZipFileInstaller::Create(ExtensionSystem::Get(profile)->extension_service())
+    ZipFileInstaller::Create(
+        MakeRegisterInExtensionServiceCallback(
+            ExtensionSystem::Get(profile)->extension_service()))
         ->LoadFromZipFile(file_to_install_);
   } else {
     std::unique_ptr<ExtensionInstallPrompt> prompt(
