extensions/browser/zipfile_installer.h
@@ -2,8 +2,8 @@
 // Use of this source code is governed by a BSD-style license that can be
 // found in the LICENSE file.
 
-#ifndef CHROME_BROWSER_EXTENSIONS_ZIPFILE_INSTALLER_H_
-#define CHROME_BROWSER_EXTENSIONS_ZIPFILE_INSTALLER_H_
+#ifndef EXTENSIONS_BROWSER_ZIPFILE_INSTALLER_H_
+#define EXTENSIONS_BROWSER_ZIPFILE_INSTALLER_H_
 
 #include <memory>
 #include <string>
@@ -12,9 +12,8 @@
 #include "base/macros.h"
 #include "base/memory/ref_counted.h"
 #include "base/memory/weak_ptr.h"
+#include "base/sequence_checker.h"
 #include "content/public/browser/utility_process_mojo_client.h"
-
-class ExtensionService;
 
 namespace extensions {
 
@@ -22,21 +21,27 @@ namespace mojom {
 class ExtensionUnpacker;
 }
 
-// ZipFileInstaller unzips an extension in a utility process. On success, the
-// extension content is loaded by an extensions::UnpackedInstaller. The class
-// lives on the UI thread.
+// ZipFileInstaller unzips an extension in a utility process.
+// This class is not thread-safe: it is bound to the sequence it is created on.
 class ZipFileInstaller : public base::RefCountedThreadSafe<ZipFileInstaller> {
  public:
-  static scoped_refptr<ZipFileInstaller> Create(ExtensionService* service);
+  // The callback invoked when the ZIP file installation is finished.
+  // On success, |unzip_dir| points to the directory the ZIP file was installed
+  // and |error| is empty. On failure, |unzip_dir| is empty and |error| contains
+  // an error message describing the failure.
+  using DoneCallback = base::OnceCallback<void(const base::FilePath& zip_file,
+                                               const base::FilePath& unzip_dir,
+                                               const std::string& error)>;
+
+  // Creates a ZipFileInstaller that invokes |done_callback| when done.
+  static scoped_refptr<ZipFileInstaller> Create(DoneCallback done_callback);
 
   void LoadFromZipFile(const base::FilePath& zip_file);
-
-  void set_be_noisy_on_failure(bool value) { be_noisy_on_failure_ = value; }
 
  private:
   friend class base::RefCountedThreadSafe<ZipFileInstaller>;
 
-  explicit ZipFileInstaller(ExtensionService* service);
+  explicit ZipFileInstaller(DoneCallback done_callback);
   ~ZipFileInstaller();
 
   // Unzip an extension into |unzip_dir| and load it with an UnpackedInstaller.
@@ -46,11 +51,8 @@ class ZipFileInstaller : public base::RefCountedThreadSafe<ZipFileInstaller> {
   // On failure, report the |error| reason.
   void ReportFailure(const std::string& error);
 
-  // Passed to the LoadErrorReporter when reporting errors.
-  bool be_noisy_on_failure_;
-
-  // Pointer to our controlling extension service.
-  base::WeakPtr<ExtensionService> extension_service_weak_;
+  // Callback invoked when unzipping has finished.
+  DoneCallback done_callback_;
 
   // File containing the extension to unzip.
   base::FilePath zip_file_;
@@ -59,9 +61,11 @@ class ZipFileInstaller : public base::RefCountedThreadSafe<ZipFileInstaller> {
   std::unique_ptr<content::UtilityProcessMojoClient<mojom::ExtensionUnpacker>>
       utility_process_mojo_client_;
 
+  SEQUENCE_CHECKER(sequence_checker_);
+
   DISALLOW_COPY_AND_ASSIGN(ZipFileInstaller);
 };
 
 }  // namespace extensions
 
-#endif  // CHROME_BROWSER_EXTENSIONS_ZIPFILE_INSTALLER_H_
+#endif  // EXTENSIONS_BROWSER_ZIPFILE_INSTALLER_H_
